[package]
name = "pybites-rust-download"
version = "0.1.4"
edition = "2024"

[dependencies]
reqwest = { version="0.12.23" , features = ["blocking", "json"]}
serde = { version = "1.0.227", features = ["derive"] }

[[bin]]
name = "pybites-rust-download"
path = "src/main.rs"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.25.0"
