[package]
name = "pybites-rust-download"
version = "0.1.4"
edition = "2024"
authors = ["Giuseppe Cunsolo", "Bob Belderbos"]
description = "Exercise downloader for the PyBites Rust platform (rustplatform.com)"
license = "MIT"
repository = "https://github.com/PyBites-Open-Source/pybites_rust"
homepage = "https://rustplatform.com/"
readme = "../README.md"
keywords = ["pybites", "rust", "exercises"]
categories = ["command-line-utilities"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
reqwest = { version="0.12.23" , features = ["blocking", "json"]}
serde = { version = "1.0.227", features = ["derive"] }

[[bin]]
name = "pybites-rust-download"
path = "src/main.rs"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.25.0"
